backend/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: history-service-allow-flask
  namespace: ashapp
spec:
  podSelector:
    matchLabels:
      app: history-service
  policyTypes:
  - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: flask-app
      ports:
        - protocol: TCP
          port: 8081
